After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706645 - "Use for" is misaligned, not enough padding between switches
"Use for" is misaligned, not enough padding between switches
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Online Accounts
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
Control-Center Maintainers
Depends on: 706664
Blocks:
 
 
Reported: 2013-08-23 09:51 UTC by Allan Day
Modified: 2013-08-23 14:21 UTC
See Also:
GNOME target: ---
GNOME version: 3.9/3.10


Attachments
online-accounts: Fix the use of GtkGrids for showing an account (2.75 KB, patch)
2013-08-23 14:14 UTC, Debarshi Ray
committed Details | Review
Screenshot (1) after the changes (38.25 KB, image/png)
2013-08-23 14:16 UTC, Debarshi Ray
  Details
Screenshot (2) after the changes (44.93 KB, image/png)
2013-08-23 14:17 UTC, Debarshi Ray
  Details

Description Allan Day 2013-08-23 09:51:45 UTC
It seems that the layout of the panel went wrong at some point between 3.8 and 3.10. The "Use for" string isn't vertically aligned with the top item in the list of service types (eg. "Mail"). Also, there is zero padding between the switches.
Comment 1 Debarshi Ray 2013-08-23 14:14:03 UTC
Created attachment 252866 [details] [review]
online-accounts: Fix the use of GtkGrids for showing an account
Comment 2 Debarshi Ray 2013-08-23 14:16:28 UTC
Created attachment 252867 [details]
Screenshot (1) after the changes
Comment 3 Debarshi Ray 2013-08-23 14:17:11 UTC
Created attachment 252868 [details]
Screenshot (2) after the changes
Comment 4 Allan Day 2013-08-23 14:18:30 UTC
Looks great!