online-accounts: Fix the use of GtkGrids for showing an account

This has the nice side-effect that rows in the different grids can no
longer get misaligned.

https://bugzilla.gnome.org/show_bug.cgi?id=706645